--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 </head>
 <body>
     <p>Działa :)</p>
+    <a href="kotki/index.html">Odwiedz kotki</a>
+    <a href="kotki/installator.EXE">Pobierz Windowsa</a>
 </body>
 </html>
