--- a/Pan Roman/index.html
+++ b/Pan Roman/index.html
@@ -36,10 +36,10 @@ body {
 <body>
 
 <div class="topnav">
-  <a class="active" href="#home">Menu Głowne</a>
+  <a href="https://tomekz112.github.io/">Menu Głowne</a>
   <a href="gry do pobrania/index.html">Gry Do pobrania</a>
   <a href="kontakt/index.html">Kontakt</a>
-  <a href="Pan Roman/index.html">Pan Roman</a>
+  <a class="active" href="Pan Roman/index.html">Pan Roman</a>
 </div>
 
 <div style="padding-left:16px">
