--- a/kotki/Gry_Do_Pobrania.html
+++ b/kotki/Gry_Do_Pobrania.html
@@ -36,8 +36,8 @@ body {
 <body>
 
 <div class="topnav">
-  <a class="active" href="#home">Menu Głowne</a>
-  <a href="Gry_Do_Pobrania.html">Gry Do pobrania</a>
+  <a href="https://tomekz112.github.io/">Menu Głowne</a>
+  <a class="active" href="gry do pobrania/index.html">Gry Do pobrania</a>
   <a href="kontakt/index.html">Kontakt</a>
   <a href="Pan Roman/index.html">Pan Roman</a>
 </div>
