--- a/Gry_Do_Pobrania.html
+++ b/Gry_Do_Pobrania.html
@@ -36,15 +36,40 @@ body {
 <body>
 
 <div class="topnav">
-  <a href="https://tomekz112.github.io/">Menu Głowne</a>
-  <a class="active" href="gry do pobrania/index.html">Gry Do pobrania</a>
-  <a href="kontakt/index.html">Kontakt</a>
-  <a href="Pan Roman/index.html">Pan Roman</a>
+  <a href="index.html">Menu Głowne</a>
+  <a class="active" href="gry_do_pobrania.html">Gry Do pobrania</a>
+  <a href="kontakt.html">Kontakt</a>
+  <a href="Pan_Roman.html">Pan Roman</a>
 </div>
 
 <div style="padding-left:16px">
-  <h2>Witam w mojej kuchni</h2>
-  <p>Znajdziesz tu różne fajne rzeczy w menu na górze</p>
+  <h2>Gry</h2>
+  <p>Znajdziesz tu fajne gry, które zrobiłem i nadczym tera pracuje</p>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p>Saper (nie ma muzyczki) to taka stara gra, którą postanowiłem zrobić link do pobrania:</p>
+  <a href="instalatory/InstalatorSapera.EXE">tu</a>
+  <p>zdjęcia</p>
+  <img src="saper.png" alt="saper 1">
+  <img src="saper1.png" alt="saper 2">
+  <img src="saper2.png" alt="saper 3">
+  <p></p>
+  <p></p>
+  <p></p>
+  <p>Snake (ma muzyczke) to też taka stara fajna gra, która postanowiłem zrobić link do pobrania:</p>
+  <a href="instalatory/InstalatorSnake'a.EXE">tu</a>
+  <img src="snake.png" alt="snake 1">
+  <img src="snake1.png" alt="snake 2">
+  <p></p>
+  <p></p>
+  <p></p>
+  <p>Aktualnie pracuje nad taką op grą tu są zdj</p>
+  <img src="1.png" alt="1">
+  <img src="2.png" alt="2">
+  <img src="3.png" alt="3">
+  <p>Chce zrobić taki jakby z Baldur's Gate chat (tak, da się go scrollować)</p>
 </div>
 
 </body>
+</html>
