--- a/Pan_Roman.html
+++ b/Pan_Roman.html
@@ -36,15 +36,19 @@ body {
 <body>
 
 <div class="topnav">
-  <a href="https://tomekz112.github.io/">Menu Głowne</a>
-  <a class="active" href="gry do pobrania/index.html">Gry Do pobrania</a>
-  <a href="kontakt/index.html">Kontakt</a>
-  <a href="Pan Roman/index.html">Pan Roman</a>
+  <a href="index.html">Menu Głowne</a>
+  <a href="gry_do_pobrania.html">Gry Do pobrania</a>
+  <a href="kontakt.html">Kontakt</a>
+  <a class="active" href="#Pan_Roman">Pan Roman</a>
 </div>
 
 <div style="padding-left:16px">
-  <h2>Witam w mojej kuchni</h2>
-  <p>Znajdziesz tu różne fajne rzeczy w menu na górze</p>
+  <h2>Pan Roman</h2>
+  <p>Ogólnie Pan Roman to taki sławny jutuber</p>
+  <p>i tu jest link do jego twórczości:</p>
+  <a href="https://www.youtube.com/channel/UCsIFGUOpW_eldWqdFOuCDnw">Fortepanium Romanum</a>
+  <p>i to w sumie tyle</p>
 </div>
 
 </body>
+</html>
