--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ body {
 <div class="topnav">
   <a class="active" href="#home">Menu Głowne</a>
   <a href="Gry_Do_Pobrania.html">Gry Do pobrania</a>
-  <a href="kontakt/index.html">Kontakt</a>
-  <a href="Pan Roman/index.html">Pan Roman</a>
+  <a href="kontakt.html">Kontakt</a>
+  <a href="Pan_Roman.html">Pan Roman</a>
 </div>
 
 <div style="padding-left:16px">
@@ -48,3 +48,4 @@ body {
 </div>
 
 </body>
+</html>
