--- a/kontakt.html
+++ b/kontakt.html
@@ -36,15 +36,18 @@ body {
 <body>
 
 <div class="topnav">
-  <a href="https://tomekz112.github.io/">Menu Głowne</a>
-  <a href="gry do pobrania/index.html">Gry Do pobrania</a>
-  <a href="kontakt/index.html">Kontakt</a>
-  <a class="active" href="Pan Roman/index.html">Pan Roman</a>
+  <a href="index.html">Menu Głowne</a>
+  <a href="gry_do_pobrania.html">Gry Do pobrania</a>
+  <a class="active" href="#kontakt">Kontakt</a>
+  <a href="Pan_Roman.html">Pan Roman</a>
 </div>
 
 <div style="padding-left:16px">
-  <h2>Witam w mojej kuchni</h2>
-  <p>Znajdziesz tu różne fajne rzeczy w menu na górze</p>
+  <h2>Kontakt</h2>
+  <p>Discord:<br>Tomekz#2211</p>
+  <p>Mail:<br>tomekz.abc@gmail.com</p>
+  <p>Steam:<br>טומק (Tomekz)</p>
+  <p><br><br><br>I to chyba wszystko baj baj</p>
 </div>
-
 </body>
+</html>
