Ostatnie Poprawki i spanko
spanko spanko

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {
 
 <div class="topnav">
   <a class="active" href="#home">Menu Głowne</a>
-  <a href="Gry_Do_Pobrania.html">Gry Do pobrania</a>
+  <a href="Gry_Do_Pobrania.html">Gry Do Pobrania</a>
   <a href="kontakt.html">Kontakt</a>
   <a href="Pan_Roman.html">Pan Roman</a>
 </div>
