--- a/Gry_Do_Pobrania.html
+++ b/Gry_Do_Pobrania.html
@@ -37,7 +37,7 @@ body {
 
 <div class="topnav">
   <a href="index.html">Menu Głowne</a>
-  <a class="active" href="gry_do_pobrania.html">Gry Do pobrania</a>
+  <a class="active" href="gry_do_pobrania.html">Gry Do Pobrania</a>
   <a href="kontakt.html">Kontakt</a>
   <a href="Pan_Roman.html">Pan Roman</a>
 </div>
@@ -45,25 +45,23 @@ body {
 <div style="padding-left:16px">
   <h2>Gry</h2>
   <p>Znajdziesz tu fajne gry, które zrobiłem i nadczym tera pracuje</p>
-  <p></p>
-  <p></p>
-  <p></p>
+  <br><br>
+  <br><br>
   <p>Saper (nie ma muzyczki) to taka stara gra, którą postanowiłem zrobić link do pobrania:</p>
   <a href="instalatory/InstalatorSapera.EXE">tu</a>
   <p>zdjęcia</p>
   <img src="saper.png" alt="saper 1">
   <img src="saper1.png" alt="saper 2">
   <img src="saper2.png" alt="saper 3">
-  <p></p>
-  <p></p>
-  <p></p>
+  <br><br>
+  <br><br>
   <p>Snake (ma muzyczke) to też taka stara fajna gra, która postanowiłem zrobić link do pobrania:</p>
   <a href="instalatory/InstalatorSnake'a.EXE">tu</a>
+  <p><br>zdjęcia</p>
   <img src="snake.png" alt="snake 1">
   <img src="snake1.png" alt="snake 2">
-  <p></p>
-  <p></p>
-  <p></p>
+  <br><br>
+  <br><br>
   <p>Aktualnie pracuje nad taką op grą tu są zdj</p>
   <img src="1.png" alt="1">
   <img src="2.png" alt="2">
