--- a/Pan_Roman.html
+++ b/Pan_Roman.html
@@ -37,7 +37,7 @@ body {
 
 <div class="topnav">
   <a href="index.html">Menu Głowne</a>
-  <a href="gry_do_pobrania.html">Gry Do pobrania</a>
+  <a href="Gry_Do_Pobrania.html">Gry Do Pobrania</a>
   <a href="kontakt.html">Kontakt</a>
   <a class="active" href="#Pan_Roman">Pan Roman</a>
 </div>
