--- a/kontakt.html
+++ b/kontakt.html
@@ -37,7 +37,7 @@ body {
 
 <div class="topnav">
   <a href="index.html">Menu Głowne</a>
-  <a href="gry_do_pobrania.html">Gry Do pobrania</a>
+  <a href="Gry_Do_Pobrania.html">Gry Do Pobrania</a>
   <a class="active" href="#kontakt">Kontakt</a>
   <a href="Pan_Roman.html">Pan Roman</a>
 </div>
