Tera naprawdę ostatnia zmiana
baj baj

--- a/Gry_Do_Pobrania.html
+++ b/Gry_Do_Pobrania.html
@@ -37,7 +37,7 @@ body {
 
 <div class="topnav">
   <a href="index.html">Menu Głowne</a>
-  <a class="active" href="gry_do_pobrania.html">Gry Do Pobrania</a>
+  <a class="active" href="Gry_Do_Pobrania.html">Gry Do Pobrania</a>
   <a href="kontakt.html">Kontakt</a>
   <a href="Pan_Roman.html">Pan Roman</a>
 </div>
